--- a/pipelines.yml
+++ b/pipelines.yml
@@ -58,6 +58,17 @@ resources:
       name: 'name_test'
       version: 'version_test'
       isSigned: false
+  - name: DistributionRule
+    type: DistributionRule
+    configuration:     
+      sourceDistribution: dist_test     
+      serviceName: 'service_test'
+      siteName: 'site_name`
+      cityName: 'city_name'
+      countryCodes:
+        - 'IN'
+        - 'AUS'
+
 pipelines:
   - name: res_test
     steps:
@@ -75,6 +86,7 @@ pipelines:
             - name: VmCluster
             - name: Aql
             - name: ReleaseBundle
+            - name: DistributionRule
         execution:
           onExecute:
             - echo "asd"
