--- a/pipelines.yml
+++ b/pipelines.yml
@@ -63,7 +63,7 @@ resources:
     configuration:     
       sourceDistribution: dist_test     
       serviceName: 'service_test'
-      siteName: 'site_name`
+      siteName: 'site_name'
       cityName: 'city_name'
       countryCodes:
         - 'IN'
